# mlproject_template_2024

./: .aim_backup_name  .dvcignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_aim_update.sh  copy_aim_runs.py  metrics.json  pyproject.toml
.aim/: .gitignore
.dvc/: config
config/: config.yaml
config/model/: lightgbm.yaml  pl_mlp.yaml  xgboost.yaml
config/preprocessing/: iris.yaml
rightmove/: dvc.yaml  train.py
src/: dvc-template.yaml  dvc.yaml  import_data.py  prepare_training_data.py  train.py
src/models/: abstract_model.py  lightgbm.py  pl_mlp.py  xgboost_iris.py
src/utils/: metrics.py
